<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:fitsSystemWindows="false"
    tools:context=".Activity.UserCenterActivity2">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"

        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="?attr/colorPrimary"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:background="@null"
            app:title="">


            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/margin_content"
                android:layout_marginTop="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/usercover"
                    android:layout_width="@dimen/usercneter_usercover_width"
                    android:layout_height="@dimen/usercneter_usercover_width"
                    android:layout_centerInParent="true"
                    android:background="@mipmap/ic_usercover_default"
                    android:scaleType="fitXY" />

                <View
                    android:id="@+id/center"
                    android:layout_width="0dp"
                    android:layout_height="14dp"
                    android:layout_below="@id/usercover"
                    android:background="@color/colorAccent"
                    android:visibility="invisible" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/userlevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/center"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_usercenter_level"
                    android:gravity="center"
                    android:minWidth="45dp"
                    android:paddingBottom="2dp"
                    android:paddingTop="2dp"
                    android:text="lv 0"
                    android:textColor="@color/color_white" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/setting"
                    android:layout_width="@dimen/usercenter_button_height"
                    android:layout_height="@dimen/usercenter_button_height"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:background="@mipmap/ic_setting" />

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/share"
                    android:layout_width="@dimen/usercenter_button_height"
                    android:layout_height="@dimen/usercenter_button_height"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@mipmap/ic_share" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                android:title=""
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/color_white"
                    android:background="@null"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/usercenter_subtype"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/message"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_usercenter_subtype"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/message"
                    android:textColor="@drawable/selector_white_and_grey"
                    android:textSize="11sp" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dynamic"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_usercenter_subtype"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/dynamic"
                    android:textColor="@drawable/selector_white_and_grey"
                    android:textSize="11sp" />


                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/work"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/ic_usercenter_subtype"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="@drawable/selector_white_and_grey"
                    android:textSize="11sp" />

            </RadioGroup>

            <com.malinskiy.superrecyclerview.SuperRecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/category"
                app:layout_empty="@layout/emptyview_nodata"></com.malinskiy.superrecyclerview.SuperRecyclerView>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
